--- a/Front end/START.html
+++ b/Front end/START.html
@@ -9,10 +9,10 @@
 <body>
     <div class="welcome-container">
         <div class="logo">
-            <img src="Expense Tracker/Front end/images/logo.png" alt="Logo">
+                <img src="images/logo.png" alt="Expense Tracker Logo">
         </div>
-        <div class="title">Welcome to Expense Tracker!</div>
-        <a href="./Landing-page.html" class="start-button">Start</a>
+        <div class="title">WELCOME TO EXPENSE TRACKER!</div>
+        <a href="HOME.html" class="start-button">Start</a>
     </div>
 </body>
 </html>
